--- a/week_1_basics_n_setup/2_docker_sql/upload-data.ipynb
+++ b/week_1_basics_n_setup/2_docker_sql/upload-data.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "8d7e4358",
+   "execution_count": 1,
+   "id": "60ff8904",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,17 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "05dd7e0e",
+   "execution_count": 2,
+   "id": "5d3f3dde",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'1.3.4'"
+       "'1.0.5'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a1d1f971",
+   "id": "a9d2a64b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "f9e76d7f",
+   "id": "007fa238",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,8 +54,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "f84ca922",
+   "execution_count": 3,
+   "id": "1dcde549",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,8 +64,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "339a5c72",
+   "execution_count": 8,
+   "id": "f45f0aa4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,8 +74,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "cec5644d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 20,
-   "id": "791b0846",
+   "id": "269f2f63",
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "de7b9007",
+   "id": "3bb78ea3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "80ba9bc5",
+   "id": "06368442",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "8ec24c0e",
+   "id": "6af39fb4",
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "3c72593b",
+   "id": "58fe6b45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b652a771",
+   "id": "1b17e1f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "8252c284",
+   "id": "205552b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "98959ffe",
+   "id": "ea7b786e",
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "42bb09d1",
+   "id": "f04c5a9f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "09cd464a",
+   "id": "394c5457",
    "metadata": {},
    "outputs": [
     {
@@ -286,8 +294,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "c2178a11",
+   "execution_count": 9,
+   "id": "938026fd",
    "metadata": {
     "scrolled": false
    },
@@ -296,17 +304,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "--2022-01-15 23:57:02--  https://s3.amazonaws.com/nyc-tlc/misc/taxi+_zone_lookup.csv\n",
-      "Resolving s3.amazonaws.com (s3.amazonaws.com)... 52.216.113.61\n",
-      "Connecting to s3.amazonaws.com (s3.amazonaws.com)|52.216.113.61|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 12322 (12K) [application/octet-stream]\n",
-      "Saving to: 'taxi+_zone_lookup.csv'\n",
-      "\n",
-      "     0K .......... ..                                         100%  910K=0.01s\n",
-      "\n",
-      "2022-01-15 23:57:02 (910 KB/s) - 'taxi+_zone_lookup.csv' saved [12322/12322]\n",
-      "\n"
+      "'wget' is not recognized as an internal or external command,\n",
+      "operable program or batch file.\n"
      ]
     }
    ],
@@ -316,10 +315,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "bdefce25",
+   "execution_count": 10,
+   "id": "37e69339",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] File taxi+_zone_lookup.csv does not exist: 'taxi+_zone_lookup.csv'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-10-057ceb7aa962>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf_zones\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'taxi+_zone_lookup.csv'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\io\\parsers.py\u001b[0m in \u001b[0;36mparser_f\u001b[1;34m(filepath_or_buffer, sep, delimiter, header, names, index_col, usecols, squeeze, prefix, mangle_dupe_cols, dtype, engine, converters, true_values, false_values, skipinitialspace, skiprows, skipfooter, nrows, na_values, keep_default_na, na_filter, verbose, skip_blank_lines, parse_dates, infer_datetime_format, keep_date_col, date_parser, dayfirst, cache_dates, iterator, chunksize, compression, thousands, decimal, lineterminator, quotechar, quoting, doublequote, escapechar, comment, encoding, dialect, error_bad_lines, warn_bad_lines, delim_whitespace, low_memory, memory_map, float_precision)\u001b[0m\n\u001b[0;32m    674\u001b[0m         )\n\u001b[0;32m    675\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 676\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0m_read\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkwds\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    677\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    678\u001b[0m     \u001b[0mparser_f\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__name__\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\io\\parsers.py\u001b[0m in \u001b[0;36m_read\u001b[1;34m(filepath_or_buffer, kwds)\u001b[0m\n\u001b[0;32m    446\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    447\u001b[0m     \u001b[1;31m# Create the parser.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 448\u001b[1;33m     \u001b[0mparser\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mTextFileReader\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfp_or_buf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    449\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    450\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mchunksize\u001b[0m \u001b[1;32mor\u001b[0m \u001b[0miterator\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\io\\parsers.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, f, engine, **kwds)\u001b[0m\n\u001b[0;32m    878\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0moptions\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"has_index_names\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mkwds\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"has_index_names\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    879\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 880\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_make_engine\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mengine\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    881\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    882\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mclose\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\io\\parsers.py\u001b[0m in \u001b[0;36m_make_engine\u001b[1;34m(self, engine)\u001b[0m\n\u001b[0;32m   1112\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m_make_engine\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mengine\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"c\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1113\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mengine\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m\"c\"\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1114\u001b[1;33m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_engine\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mCParserWrapper\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0moptions\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1115\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1116\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mengine\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m\"python\"\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\io\\parsers.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, src, **kwds)\u001b[0m\n\u001b[0;32m   1889\u001b[0m         \u001b[0mkwds\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"usecols\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0musecols\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1890\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1891\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_reader\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mparsers\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mTextReader\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msrc\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1892\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0munnamed_cols\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_reader\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0munnamed_cols\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1893\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mpandas\\_libs\\parsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.TextReader.__cinit__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mpandas\\_libs\\parsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.TextReader._setup_parser_source\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] File taxi+_zone_lookup.csv does not exist: 'taxi+_zone_lookup.csv'"
+     ]
+    }
+   ],
    "source": [
     "df_zones = pd.read_csv('taxi+_zone_lookup.csv')"
    ]
@@ -327,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "c99e27b5",
+   "id": "c40d7f2c",
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "5134c2e2",
+   "id": "9dc18085",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ffae4651",
+   "id": "68ab5909",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -436,7 +454,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -450,7 +468,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
